Works now, wrong link

--- a/sketchpad/index.html
+++ b/sketchpad/index.html
@@ -4,8 +4,7 @@
   <link href="css/styles.css" rel="stylesheet">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript"></script>
-  <script src="js/script.js" type="text/javascript"></script>
+  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
 <body>
   <div id="container">
@@ -33,7 +32,7 @@
         </tr>
       </table>
     </div>
-    <div class="wrapper">
+    <div id="wrapper">
       <!--<table class="grid">-->
 
       <!--</table>-->
@@ -42,5 +41,6 @@
       <p>JQuery Sketchpad, by <strong><i>Matias Pan</i></strong> -<a href="https://github.com/kriox26"> Github</a></a></p>
     </div>
   </div>
+  <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
