--- a/sketchpad/index.html
+++ b/sketchpad/index.html
@@ -4,7 +4,6 @@
   <link href="css/styles.css" rel="stylesheet">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
 <body>
   <div id="container">
@@ -38,9 +37,10 @@
       <!--</table>-->
     </div>
     <div class="footer">
-      <p>JQuery Sketchpad, by <strong><i>Matias Pan</i></strong> -<a href="https://github.com/kriox26"> Github</a></a></p>
+      <p>JQuery Sketchpad, by <strong><i>Matias Pan</i></strong> -<a href="https://github.com/kriox26"> Github</a></p>
     </div>
   </div>
+  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
